[package]
name = "meiid"
version = "0.1.1"
edition = "2021"
description = "Meiid UUID generator based on current date for rust"
keywords = ["uuid", "id", "database"]
categories = ["database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/borngraced/meiid-rust/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4"